# cib-models

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: cib_analysis_example.ipynb
notebooks/.ipynb_checkpoints/: cib_analysis_example-checkpoint.ipynb
src/models/: cib_analysis.py
src/plotting/: cib_plotting.py
